# AugMediaPlayer

./: .gitignore  .pnp.cjs  Cargo.toml  LICENSE_MIT  README.md  package.json
common_media/: Cargo.toml
common_media/src/: lib.rs  media_player.rs
desktop_app/: Cargo.toml
desktop_app/src/: config.rs  desktop_player.rs  lib.rs  main.rs  ui.rs
src/: config.rs  lib.rs  main.rs  media_player.rs  ui.rs
video-backend/: .env.example  Cargo.toml
video-backend/src/: lib.rs  main.rs  media.rs
wasm_app/: .pnp.cjs  Cargo.toml  index.html  package.json  vite.config.dev.ts
wasm_app/src/: browser_player.rs  counter.ts  lib.rs  main.ts  metadata_parser.rs  style.css
