[package]
name = "aug_media_player"
version = "0.1.0"
edition = "2024"
authors = ["Gabriel Torres <gabrieltorres2014@gmail.com>"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
gst-plugin-gtk4 ={version = "0.14.4", default-features = false, features = [ 'wayland', 'x11glx', 'x11egl']}
gstreamer = "0.24.4"
gstreamer-video = { version = "0.24", features = ["v1_20"] }
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_6"] }
thiserror = "2.0.17"
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["console_error_panic_hook"]
wayland = ["gst-plugin-gtk4/wayland"]
x11glx = ["gst-plugin-gtk4/x11glx"]
x11egl = ["gst-plugin-gtk4/x11egl"]

[lib]
crate-type = ["cdylib", "rlib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"