[package]
name = "video-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features = ['macros', 'ws', 'multipart']}
dotenv = "0.15.0"
gstreamer = "0.24.4"
gstreamer-app = "0.24.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio ={version= "1.49.0", features=['full']}
tokio-util = { version = "0.7", features = ["io"] }
uuid = {version="1.20.0", features = ['v4']}
tower-http = { version = "0.6.2", features = ["cors"] }
